--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Created log files by sensors
+/DAid/Clients/bin/Debug/net48/*.txt
